// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SunCardContent render does not render the footer when show footer returns false 1`] = `
<!---->
      <ha-card>
        <div class="sun-card ">
          <!--?lit-->
      <div class="sun-card-header">
        SUN CARD HEADER
      </div>
    
          <!--?lit-->
      <div class="sun-card-graph">
        SUN CARD GRAPH
      </div>
    
          <!--?lit--><!--?-->
        </div>
      </ha-card>
    
`;

exports[`SunCardContent render does not render the header when show header returns false 1`] = `
<!---->
      <ha-card>
        <div class="sun-card ">
          <!--?lit--><!--?-->
          <!--?lit-->
      <div class="sun-card-graph">
        SUN CARD GRAPH
      </div>
    
          <!--?lit-->
      <div class="sun-card-footer">
        SUN CARD FOOTER
      </div>
    
        </div>
      </ha-card>
    
`;

exports[`SunCardContent render does not set dark mode when it is set to false on the config 1`] = `
<!---->
      <ha-card>
        <div class="sun-card ">
          <!--?lit-->
      <div class="sun-card-header">
        SUN CARD HEADER
      </div>
    
          <!--?lit-->
      <div class="sun-card-graph">
        SUN CARD GRAPH
      </div>
    
          <!--?lit-->
      <div class="sun-card-footer">
        SUN CARD FOOTER
      </div>
    
        </div>
      </ha-card>
    
`;

exports[`SunCardContent render renders the footer when show footer returns true 1`] = `
<!---->
      <ha-card>
        <div class="sun-card ">
          <!--?lit-->
      <div class="sun-card-header">
        SUN CARD HEADER
      </div>
    
          <!--?lit-->
      <div class="sun-card-graph">
        SUN CARD GRAPH
      </div>
    
          <!--?lit-->
      <div class="sun-card-footer">
        SUN CARD FOOTER
      </div>
    
        </div>
      </ha-card>
    
`;

exports[`SunCardContent render renders the header when show header returns true 1`] = `
<!---->
      <ha-card>
        <div class="sun-card ">
          <!--?lit-->
      <div class="sun-card-header">
        SUN CARD HEADER
      </div>
    
          <!--?lit-->
      <div class="sun-card-graph">
        SUN CARD GRAPH
      </div>
    
          <!--?lit-->
      <div class="sun-card-footer">
        SUN CARD FOOTER
      </div>
    
        </div>
      </ha-card>
    
`;

exports[`SunCardContent render sets dark mode when it is set to true on the config 1`] = `
<!---->
      <ha-card>
        <div class="sun-card sun-card-dark">
          <!--?lit-->
      <div class="sun-card-header">
        SUN CARD HEADER
      </div>
    
          <!--?lit-->
      <div class="sun-card-graph">
        SUN CARD GRAPH
      </div>
    
          <!--?lit-->
      <div class="sun-card-footer">
        SUN CARD FOOTER
      </div>
    
        </div>
      </ha-card>
    
`;
